Fix : analytis 수정