@@ -1,27 +1,31 @@
 package com.ktds.hi.analytics.infra.gateway;
 
+import com.fasterxml.jackson.core.JsonProcessingException;
+import com.fasterxml.jackson.core.type.TypeReference;
+import com.fasterxml.jackson.databind.ObjectMapper;
 import com.ktds.hi.analytics.biz.domain.ActionPlan;
-import com.ktds.hi.analytics.biz.domain.PlanStatus;
 import com.ktds.hi.analytics.biz.usecase.out.ActionPlanPort;
 import com.ktds.hi.analytics.infra.gateway.entity.ActionPlanEntity;
 import com.ktds.hi.analytics.infra.gateway.repository.ActionPlanJpaRepository;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Component;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
 
 /**
- * 실행 계획 리포지토리 어댑터 클래스
+ * 실행 계획 리포지토리 어댑터 클래스 (완성버전)
  * ActionPlan Port를 구현하여 데이터 영속성 기능을 제공
  */
+@Slf4j
 @Component
 @RequiredArgsConstructor
 public class ActionPlanRepositoryAdapter implements ActionPlanPort {
     
     private final ActionPlanJpaRepository actionPlanJpaRepository;
+    private final ObjectMapper objectMapper;
     
     @Override
     public List<ActionPlan> findActionPlansByStoreId(Long storeId) {
@@ -61,10 +65,11 @@ public class ActionPlanRepositoryAdapter implements ActionPlanPort {
                 .description(entity.getDescription())
                 .period(entity.getPeriod())
                 .status(entity.getStatus())
-                .tasks(entity.getTasksJson() != null ? parseTasksJson(entity.getTasksJson()) : List.of())
+                .tasks(parseTasksJson(entity.getTasksJson()))
                 .note(entity.getNote())
                 .createdAt(entity.getCreatedAt())
                 .completedAt(entity.getCompletedAt())
+                .updatedAt(entity.getUpdatedAt())
                 .build();
     }
     
@@ -80,30 +85,41 @@ public class ActionPlanRepositoryAdapter implements ActionPlanPort {
                 .description(domain.getDescription())
                 .period(domain.getPeriod())
                 .status(domain.getStatus())
-                .tasksJson(domain.getTasks() != null ? toTasksJsonString(domain.getTasks()) : "[]")
+                .tasksJson(parseTasksToJson(domain.getTasks()))
                 .note(domain.getNote())
-                .createdAt(domain.getCreatedAt())
                 .completedAt(domain.getCompletedAt())
                 .build();
     }
     
     /**
-     * JSON 문자열을 Tasks List로 파싱
+     * JSON 문자열을 List로 변환
      */
-    private List<String> parseTasksJson(String json) {
-        if (json == null || json.trim().isEmpty() || "[]".equals(json.trim())) {
+    private List<String> parseTasksJson(String tasksJson) {
+        if (tasksJson == null || tasksJson.trim().isEmpty()) {
             return List.of();
         }
-        return Arrays.asList(json.replace("[", "").replace("]", "").replace("\"", "").split(","));
+        
+        try {
+            return objectMapper.readValue(tasksJson, new TypeReference<List<String>>() {});
+        } catch (JsonProcessingException e) {
+            log.warn("Tasks JSON 파싱 실패: {}", tasksJson, e);
+            return List.of();
+        }
     }
     
     /**
-     * Tasks List를 JSON 문자열로 변환
+     * List를 JSON 문자열로 변환
      */
-    private String toTasksJsonString(List<String> tasks) {
+    private String parseTasksToJson(List<String> tasks) {
         if (tasks == null || tasks.isEmpty()) {
             return "[]";
         }
-        return "[\"" + String.join("\",\"", tasks) + "\"]";
+        
+        try {
+            return objectMapper.writeValueAsString(tasks);
+        } catch (JsonProcessingException e) {
+            log.warn("Tasks JSON 직렬화 실패: {}", tasks, e);
+            return "[]";
+        }
     }
 }
